--- a/print.html
+++ b/print.html
@@ -36,7 +36,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-12f0f6b9.js";
+            window.path_to_searchindex_js = "searchindex-86aee505.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-49642890.js"></script>
@@ -176,34 +176,38 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="silentazure"><a class="header" href="#silentazure">Silent//Azure</a></h1>
-<p><a href="https://x.com/TachibanaIone/status/2002582332667302291?s=20">お品書き</a></p>
-<img src="image.png" height="800">
 <h3 id="注文"><a class="header" href="#注文">注文</a></h3>
 <ul>
 <li>C106の既刊・1限目(1000円)</li>
 <li>C107の新刊・2限目(1000円)</li>
 </ul>
+<p><a href="https://x.com/TachibanaIone/status/2002582332667302291?s=20">ツイッター</a></p>
+<p><a href="https://webcatalog.circle.ms/Circle/22017419">コミケカタログ</a></p>
+<img src="image.png" height="800">
 <h1 id="111当番"><a class="header" href="#111当番">111当番</a></h1>
-<p><a href="https://x.com/no100/status/2003057937523015716?s=20">お品書き</a></p>
-<img src="image-1.png" height="800">
 <h3 id="注文-1"><a class="header" href="#注文-1">注文</a></h3>
 <ul>
 <li>新刊セット(3000円)</li>
 </ul>
+<p><a href="https://x.com/no100/status/2003057937523015716?s=20">ツイッター</a></p>
+<p><a href="https://webcatalog.circle.ms/Circle/22010190">コミケカタログ</a></p>
+<img src="image-1.png" height="800">
 <h1 id="夕暮間"><a class="header" href="#夕暮間">夕暮間</a></h1>
-<p><a href="https://x.com/yuuKurema/status/2002322979015774274?s=20">お品書き</a></p>
-<img src="image-2.png" height="800">
 <h3 id="注文-2"><a class="header" href="#注文-2">注文</a></h3>
 <ul>
 <li>新刊セット(3000円)</li>
 </ul>
+<p><a href="https://x.com/yuuKurema/status/2002322979015774274?s=20">ツイッター</a></p>
+<p><a href="https://webcatalog.circle.ms/Circle/22003893">コミケカタログ</a></p>
+<img src="image-2.png" height="800">
 <h1 id="summerlily"><a class="header" href="#summerlily">SUMMERLILY</a></h1>
-<p><a href="https://x.com/eureka_yu_rika/status/2003392348559225091">お品書き</a></p>
-<img src="image-3.png" height="800">
 <h3 id="注文-3"><a class="header" href="#注文-3">注文</a></h3>
 <ul>
 <li>ことねいろでいず2(1500円)</li>
 </ul>
+<p><a href="https://x.com/eureka_yu_rika/status/2003392348559225091">ツイッター</a></p>
+<p><a href="https://webcatalog.circle.ms/Circle/22007805">コミケカタログ</a></p>
+<img src="image-3.png" height="800">
 
                     </main>
 
