--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 </ul>
 <p><a href="https://x.com/TachibanaIone/status/2002582332667302291?s=20">ツイッター</a></p>
 <p><a href="https://webcatalog.circle.ms/Circle/22017419">コミケカタログ</a></p>
-<img src="image.png" height="800">
+<img src="image.png" width="500">
 <h1 id="111当番"><a class="header" href="#111当番">111当番</a></h1>
 <h3 id="注文-1"><a class="header" href="#注文-1">注文</a></h3>
 <ul>
@@ -190,7 +190,7 @@
 </ul>
 <p><a href="https://x.com/no100/status/2003057937523015716?s=20">ツイッター</a></p>
 <p><a href="https://webcatalog.circle.ms/Circle/22010190">コミケカタログ</a></p>
-<img src="image-1.png" height="800">
+<img src="image-1.png" width="500">
 <h1 id="夕暮間"><a class="header" href="#夕暮間">夕暮間</a></h1>
 <h3 id="注文-2"><a class="header" href="#注文-2">注文</a></h3>
 <ul>
@@ -198,7 +198,7 @@
 </ul>
 <p><a href="https://x.com/yuuKurema/status/2002322979015774274?s=20">ツイッター</a></p>
 <p><a href="https://webcatalog.circle.ms/Circle/22003893">コミケカタログ</a></p>
-<img src="image-2.png" height="800">
+<img src="image-2.png" width="500">
 <h1 id="summerlily"><a class="header" href="#summerlily">SUMMERLILY</a></h1>
 <h3 id="注文-3"><a class="header" href="#注文-3">注文</a></h3>
 <ul>
@@ -206,7 +206,7 @@
 </ul>
 <p><a href="https://x.com/eureka_yu_rika/status/2003392348559225091">ツイッター</a></p>
 <p><a href="https://webcatalog.circle.ms/Circle/22007805">コミケカタログ</a></p>
-<img src="image-3.png" height="800">
+<img src="image-3.png" width="500">
 
                     </main>
 
